# rust-wasm-vite-gameoflife

./: .gitignore  Cargo.toml  README.md  index.html
node/: package.json  playground.js
src/: lib.rs  math.rs
tests/: web.rs
www/: .editorconfig  .prettierignore  .prettierrc  bootstrap.ts  eslint.config.js  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.js
www/src/modules/: game_of_life.ts  types.ts
www/src/modules/app/: canvas-handlers.ts  controls.ts  error.ts  fps.ts  game-init.ts
www/src/modules/render_context/: render_2d.ts  render_context_interface.ts  render_webgl.ts
www/src/modules/utils/: dom.ts
www/src/modules/webgl/: shaders.ts
www/src/modules/webgl/shaders/: fragment.glsl
www/src/styles/: styles.css
