[package]
name = "playground"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = "debuginfo"

[dependencies]
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
